--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(Images/Bat_car.jpg);
+    background-image: url(Bat_car.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -357,7 +357,7 @@ nav .fas{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(Images/Bat_small_scr.jpg);
+        background-image: url(Bat_small_scr.jpg);
         width: 100%;
         height: 100vh;
     }
